# komari

./: .gitignore  YOLO_TRAINING_README.md  rust-toolchain.toml
.cargo/: config.toml
backend/: Cargo.toml  build.rs
backend/src/: lib.rs  rotator.rs  rotator_debug.rs
backend/src/grpc/: input.rs  service.rs
backend/src/models/: character.rs  settings.rs
backend/src/player/: actions.rs  mod.rs  moving.rs  state.rs  use_key.rs
backend/src/services/: character.rs  debug.rs  mediator.rs  mod.rs
docs/: setup_on_local.md
ui/: package-lock.json
ui/src/: debug.rs  main.rs  minimap.rs  settings.rs
ui/src/actions/: mod.rs
ui/src/characters/: mod.rs
