[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tonic = "0.13.1"
bit-vec = "0.8"
base64 = "0.22.1"
strsim = "0.11.1"
nalgebra = "0.34.1"
lapjv = "0.3.0"
prost = "0.13.5"
platforms = { workspace = true }
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "load-dynamic",
    "cuda",
] }
opencv = { version = "0.98.2", default-features = false, features = [
    "imgcodecs",
    "imgproc",
    "highgui",
    "videoio",
] }
anyhow = "1.0.98"
log = { workspace = true }
rand = { workspace = true }
rand_distr = "0.5.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
ordered_hash_map = "0.4.0"
noise = "0.9"
reqwest = { version = "0.12.20", features = ["multipart"] }
include_dir = "0.7.4"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.13.1"

[dev-dependencies]
mockall = { version = "0.13.1", features = ["nightly"] }

[lints]
workspace = true
